@@ -45,14 +45,14 @@ PORT_OPTIONS:=	${PORT_OPTIONS:NEXAMPLES}
 .endif
 
 # no problem with Python > 3.2
-.if ${PYTHON_REL} >= 320
+.if ${PYTHON_REL} >= 3200
 pre-build:
 	${PY2TO3_CMD} ${PY2TO3_ARGS} ${WRKSRC}/jinja2
 .endif
 
 .if ${PKGNAMESUFFIX} == "-doc"
 do-build:
-.	if ${PYTHON_REL} >= 300
+.	if ${PYTHON_REL} >= 3000
 	@${PY2TO3_CMD} ${PY2TO3_ARGS} ${WRKSRC}/docs
 .	endif
 	(cd ${WRKSRC}/docs && ${MAKE} html)
@@ -66,7 +66,7 @@ do-install:
 .if ${PORT_OPTIONS:MEXAMPLES}
 PORTEXAMPLES=	*
 post-build:
-.	if ${PYTHON_REL} >= 300
+.	if ${PYTHON_REL} >= 3000
 	${PY2TO3_CMD} ${PY2TO3_ARGS} ${WRKSRC}/examples
 .	endif
 	${PYTHON_CMD} -m compileall ${WRKSRC}/examples ; \
