@@ -262,7 +262,7 @@ post-install:
 	${PYTHON_CMD} -O ${PYTHON_LIBDIR}/compileall.py \
 		-d ${PYTHONPREFIX_SITELIBDIR} -f ${PYTHONPREFIX_SITELIBDIR:S|${PREFIX}/||})
 	${MKDIR} ${STAGEDIR}${EXAMPLESDIR}
-.   if defined(PYTHON_REL) && ${PYTHON_REL} >= 300
+.   if defined(PYTHON_REL) && ${PYTHON_REL} >= 3000
 	cd ${WRKSRC}/samples/python && \
 		${COPYTREE_SHARE} . ${STAGEDIR}${EXAMPLESDIR}/python
 .   else
